Add get bucket list api method
